--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.howard.finalproject">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,8 +21,16 @@
         <activity
             android:name=".Category"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".search" />
-        <activity android:name=".Favorate"></activity>
+        <activity
+            android:name=".search"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".Favorate"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".Info" />
+        <activity
+            android:name=".Category2"
+            android:parentActivityName=".Category"/>
     </application>
 
 </manifest>
